force-app/main/default/objects/Employee__c/fields/Additional_Contact__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Contact</label>
    <type>Checkbox</type>
</CustomField>