force-app/main/default/objects/Employee__c/fields/Allowances__c.field-meta.xml
<CustomField>
    <fullName>Allowances__c</fullName>
    <label>Allowances</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>