force-app/main/default/objects/Employee__c/fields/Arabic_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Arabic_Full_Name__c</fullName>
    <formula>Arabic_First_Name__c &amp; &quot; &quot; &amp; Arabic_Middle_Name__c &amp; &quot; &quot; &amp; Arabic_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Arabic Full Name</label>
    <type>Text</type>
</CustomField>