force-app/main/default/objects/Employee__c/fields/Course_duration__c.field-meta.xml
<CustomField>
    <fullName>Course_duration__c</fullName>
    <label>Course duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>