force-app/main/default/objects/Employee__c/fields/Employee_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Employee_Identification_Number__c</fullName>
    <label>Employee Identification Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>