force-app/main/default/objects/Employee__c/fields/Exit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exit_Reason__c</fullName>
    <label>Exit Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resignation</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>End of Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>