force-app/main/default/objects/Employee__c/fields/Labour_Card_MOHRE_ID__c.field-meta.xml
<CustomField>
    <fullName>Labour_Card_MOHRE_ID__c</fullName>
    <label>Labour Card / MOHRE ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>