force-app/main/default/objects/Employee__c/fields/Monthly_salary_in_AED__c.field-meta.xml
<CustomField>
    <fullName>Monthly_salary_in_AED__c</fullName>
    <label>Monthly salary in AED</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>