force-app/main/default/objects/Employee__c/fields/Notice_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Notice_End_Date__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(Notice_Start_Date__c)),
        NOT(ISBLANK(Notice_Period_Days__c))
    ),
    Notice_Start_Date__c + Notice_Period_Days__c,
    NULL
)</formula>
    <label>Notice End Date</label>
    <type>Date</type>
</CustomField>