force-app/main/default/objects/Employee__c/fields/Notice_Payable_Recoverable_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Notice_Payable_Recoverable_Picklist__c</fullName>
    <label>Notice Payable / Recoverable	Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payable</fullName>
            </value>
            <value>
                <fullName>Recoverable</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>