force-app/main/default/objects/Employee__c/fields/Notice_Served__c.field-meta.xml
<CustomField>
    <fullName>Notice_Served__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notice Served</label>
    <type>Checkbox</type>
</CustomField>