force-app/main/default/objects/Employee__c/fields/Notice_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Notice_Start_Date__c</fullName>
    <label>Notice Start Date</label>
    <type>Date</type>
</CustomField>