force-app/main/default/objects/Employee__c/fields/Notice_Waived__c.field-meta.xml
<CustomField>
    <fullName>Notice_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notice Waived</label>
    <type>Checkbox</type>
</CustomField>