force-app/main/default/objects/Employee__c/fields/Official_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Official_Email_Id__c</fullName>
    <label>Official Email Id</label>
    <type>Email</type>
</CustomField>