force-app/main/default/objects/Employee__c/fields/Official_Employee__c.field-meta.xml
<CustomField>
    <fullName>Official_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Official Employee</label>
    <type>Checkbox</type>
</CustomField>