force-app/main/default/objects/Employee__c/fields/Official_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Official_Phone_Number__c</fullName>
    <label>Official Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>