force-app/main/default/objects/Employee__c/fields/Passing_Out_Year__c.field-meta.xml
<CustomField>
    <fullName>Passing_Out_Year__c</fullName>
    <label>Passing Out Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>