force-app/main/default/objects/Employee__c/fields/Personal_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Personal_Email_Id__c</fullName>
    <label>Personal Email Id</label>
    <type>Email</type>
</CustomField>