force-app/main/default/objects/Employee__c/fields/Personal_Info__c.field-meta.xml
<CustomField>
    <fullName>Personal_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personal Info</label>
    <type>Checkbox</type>
</CustomField>