force-app/main/default/objects/Employee__c/fields/Personal_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Personal_Phone_Number__c</fullName>
    <label>Personal Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>