force-app/main/default/objects/Employee__c/fields/Probation_period__c.field-meta.xml
<CustomField>
    <fullName>Probation_period__c</fullName>
    <label>Probation period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>