force-app/main/default/objects/Employee__c/fields/Relation_Address__c.field-meta.xml
<CustomField>
    <fullName>Relation_Address__c</fullName>
    <label>Relation Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>