force-app/main/default/objects/Employee__c/fields/Relation_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Relation_Contact_Number__c</fullName>
    <label>Relation Contact Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>