force-app/main/default/objects/Employee__c/fields/Relation_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Relation_Name_2__c</fullName>
    <label>Relation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>