force-app/main/default/objects/Employee__c/fields/Reporting_line__c.field-meta.xml
<CustomField>
    <fullName>Reporting_line__c</fullName>
    <label>Reporting line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>