force-app/main/default/objects/Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>Designation__c</columns>
    <columns>Department__c</columns>
    <columns>Employment_Type__c</columns>
    <columns>Employment_Status__c</columns>
    <columns>Bank_Name__c</columns>
    <columns>Reporting_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>